# remote-box

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
examples/: .dockerignore  Dockerfile  _backend.py  justfile  remote_hello.py  remote_session.py  subprocess_hello.py  tool_framework_pattern.py
examples/duckdb/: .dockerignore  Dockerfile  README.md  justfile  main.py  pyproject.toml
src/: __init__.py  e2e_tasks.py  test_e2e_daytona.py
src/remote/: __init__.py  cli.py  decorator.py  execution_harness.sh.tmpl  runtime.py  session.py  test_remote_box.py
src/remote/backends/: __init__.py  _common.py  subprocess.py
src/remote/backends/daytona/: __init__.py
src/remote/backends/e2b/: __init__.py
src/remote/backends/subprocess/: __init__.py
