[project]
name = "supercomputer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "asyncclick>=8.3.0.3",
    "e2b-code-interpreter>=2.4.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/activity_registration"]

[dependency-groups]
dev = [
    "marimo>=0.19.5",
]
