[project]
name = "remote-box"
version = "0.2.1"
description = "Type-safe remote Python function execution framework with multiple backend support"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jason Steving" }
]
keywords = ["remote", "execution", "distributed", "async", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "daytona>=0.146.0",
    "e2b-code-interpreter>=2.4.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/JasonSteving99/remote-box"
Repository = "https://github.com/JasonSteving99/remote-box"
Issues = "https://github.com/JasonSteving99/remote-box/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remote"]
artifacts = ["src/remote/*.tmpl"]
exclude = [
    "src/remote/test_*.py",
]

[dependency-groups]
dev = [
    "marimo>=0.19.5",
]
