[project]
name = "remote-box"
version = "0.4.0"
description = "Type-safe remote Python function execution framework with multiple backend support"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jason Steving" }
]
keywords = ["remote", "execution", "distributed", "async", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "daytona>=0.199.0",
    "e2b-code-interpreter>=2.8.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.scripts]
remote-box = "remote.cli:main"

[project.urls]
Homepage = "https://github.com/JasonSteving99/remote-box"
Repository = "https://github.com/JasonSteving99/remote-box"
Issues = "https://github.com/JasonSteving99/remote-box/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remote"]
artifacts = ["src/remote/*.tmpl"]
exclude = [
    "src/remote/test_*.py",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that create real cloud sandboxes (cost time and money)",
]

[dependency-groups]
dev = [
    "marimo>=0.19.5",
    "pytest>=8.0.0",
]
